--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <h5>Play SafeVial</h5>
               <h5>Aprende Sobre Seguridad Vial</h5>
               <br>
-              <span>Cierra esta ventana y da clic en  </span><a href="#" class="btn btn-primary border-width-2 d-none d-lg-inline-block"><span class="mr-2 icon-lock_outline"></span>Log In</a>
+              <span>Cierra esta ventana y da clic en LOGIN </span>
               </div>
             </div>
           <!-- Modal footer -->
