--- a/jugar.html
+++ b/jugar.html
@@ -230,6 +230,17 @@
                     </div>
                 </div>
             </div>
+            <!-- MODAL Juego -->
+            <div id="modalJugar" class="modal">
+                <div class="modal-content">
+                    <h4>Jugar</h4>
+                    <div class="contenedorJuego" style="text-align: center;">
+                        <!-- <p>Aquí va el juego</p> -->
+
+                    </div>
+                </div>
+            </div>
+            <!-- FIN modalJuego -->
 
 
             <div class="col s12">
@@ -278,6 +289,32 @@
                                         <div class="row">
                                             <!-- CONTENIDO MIBODY-->
                                             <h5>Jugar</h5>
+
+                                            <!-- TABLA -->
+                                            <div class="container caja">
+                                                <div class="row">
+                                                    <div class="col-lg-12">
+                                                    <div class="table-responsive">
+                                                        <table id="tablaJugar" class="table table-striped table-bordered table-condensed" style="width:100%" >
+                                                            <thead class="text-center">
+                                                                <tr>
+                                                                    <th>Titulo</th>
+                                                                    <th>Categoria</th>
+                                                                    <th>Nivel</th>
+                                                                    <!-- <th>Usuario Creador</th> -->
+                                                                    <th>Jugar</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+        
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- FIN TABLA -->
+
                                             <!--  FIN CONTENIDO -->
 
                                         </div>
@@ -665,6 +702,7 @@
     <script src="resources/js/comunicacion.js"></script>
     <script src="resources/js/Services/perfil.js"></script>
     <script src="app-assets/js/scripts/form-elements.js""></script>
+    <script src="resources/js/Services/jugar.js"></script>
     <!-- END PAGE LEVEL JS-->
 
 </body>
