--- a/jugar.html
+++ b/jugar.html
@@ -30,6 +30,7 @@
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="app-assets/css/custom/custom.css">
     <link rel="stylesheet" type="text/css" href="app-assets/css/custom/custom.css">
+    <link rel="stylesheet" href="resources/css/style.css">
     <!-- END: Custom CSS-->
 
 </head>
@@ -233,8 +234,7 @@
             <!-- MODAL Juego -->
             <div id="modalJugar" class="modal">
                 <div class="modal-content">
-                    <h4>Jugar</h4>
-                    <div class="contenedorJuego" style="text-align: center;">
+                    <div class="contenedorJuego" style="text-align: center; width: 100%;">
                         <!-- <p>Aquí va el juego</p> -->
 
                     </div>
