Final no va más

--- a/crearJuego.html
+++ b/crearJuego.html
@@ -75,7 +75,7 @@
                         <li><a class="grey-text text-darken-1" href="#"><i class="material-icons">chat_bubble_outline</i> Chat</a></li>
                         <li><a class="grey-text text-darken-1" href="#"><i class="material-icons">help_outline</i> Ayuda</a></li>
                         <li class="divider"></li>
-                        <li><a class="grey-text text-darken-1" href="#"><i class="material-icons">keyboard_tab</i> Salir</a></li>
+                        <li><a class="grey-text text-darken-1 btn_logOut" href="#"><i class="material-icons">keyboard_tab</i> Salir</a></li>
                     </ul>
                 </div>
                 <nav class="display-none search-sm">
@@ -252,6 +252,12 @@
                                     <div class="container caja">
                                         <div class="row">
                                             <!-- CONTENIDO MIBODY-->
+                                            <div class="alertLogeo">
+                                                <div style="text-align: center;">
+                                                    <h2>No estas registrado en la plataforma</h2><br>
+                                                    <span>Por lo que no puesde Crear Juegos -> Registrate o logeate <a href="index.html">AQUI</a> </span>
+                                                </div>
+                                            </div>
                                             <div class="paso1">
                                                 <div class="col s12 m4">
                                                     <div class="card gradient-shadow gradient-45deg-light-blue-cyan border-radius-3">
