--- a/perfil.html
+++ b/perfil.html
@@ -223,8 +223,8 @@
                         </div>
                         <div class="col s2 m6 l6"><a class="btn btn-floating dropdown-settings waves-effect waves-light breadcrumbs-btn right" href="#!" data-target="dropdown1"><i class="material-icons">expand_more </i><i class="material-icons right">arrow_drop_down</i></a>
                             <ul class="dropdown-content" id="dropdown1" tabindex="0">
-                                <li tabindex="0"><a class="grey-text text-darken-2" href="#">Crear Juego</a></li>
-                                <li tabindex="0"><a class="grey-text text-darken-2" href="#">Jugar</a></li>
+                                <li tabindex="0"><a class="grey-text text-darken-2" href="crearJuego.html">Crear Juego</a></li>
+                                <li tabindex="0"><a class="grey-text text-darken-2" href="jugar.html">Jugar</a></li>
                             </ul>
                         </div>
                     </div>
@@ -319,13 +319,15 @@
                                                 </div>
 
                                                 <div class="col s12 m4">
-                                                    <div class="card gradient-shadow gradient-45deg-red-pink border-radius-3">
-                                                        <div class="card-content center">
-                                                            <!-- <img src="" alt="images" class="width-40" /> -->
-                                                            <h5 class="white-text lighten-4">JUGAR</h5>
-                                                            <p class="white-text lighten-4">Compite con los usuarios y aprende sobre seguridad Vial</p>
+                                                    <a href="jugar.html">
+                                                        <div class="card gradient-shadow gradient-45deg-red-pink border-radius-3">
+                                                            <div class="card-content center">
+                                                                <!-- <img src="" alt="images" class="width-40" /> -->
+                                                                <h5 class="white-text lighten-4">JUGAR</h5>
+                                                                <p class="white-text lighten-4">Compite con los usuarios y aprende sobre seguridad Vial</p>
+                                                            </div>
                                                         </div>
-                                                    </div>
+                                                    </a>
                                                 </div>
 
                                                 <div class="col s12 m4">
