--- a/crearJuego.html
+++ b/crearJuego.html
@@ -252,12 +252,12 @@
                                     <div class="container caja">
                                         <div class="row">
                                             <!-- CONTENIDO MIBODY-->
-                                            <div class="alertLogeo">
+                                            <!-- <div class="alertLogeo">
                                                 <div style="text-align: center;">
                                                     <h2>No estas registrado en la plataforma</h2><br>
                                                     <span>Por lo que no puesde Crear Juegos -> Registrate o logeate <a href="index.html">AQUI</a> </span>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="paso1">
                                                 <div class="col s12 m4">
                                                     <div class="card gradient-shadow gradient-45deg-light-blue-cyan border-radius-3">
